<?xml version="1.0"?>
<package>
  <name>agvcasterwheel_simulator</name>
  <version>0.0.1</version>
  <description>
    The agvcasterwheel simulation package for Gazebo model.
  </description>
  <author>İnovasyon Mühendislik</author>
  <maintainer email="bilgi@inovasyonmuhendislik.com">İnavasyon Mühendislik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agvcasterwheel_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
