<?xml version="1.0"?>
<package>
  <name>agvmecanumwheel_simulator</name>
  <version>0.0.1</version>
  <description>
    The agvcasterwheel simulation package for Gazebo model.
  </description>
  <author>İnovasyon Mühendislik</author>
  <maintainer email="bilgi@inovasyonmuhendislik.com">İnavasyon Mühendislik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agvmecanumwheel_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
